Slide 2 - svg - adaptive. Smooth scroll - fixed jump.

--- a/src/sass/components/_section.sass
+++ b/src/sass/components/_section.sass
@@ -84,7 +84,7 @@
     display: flex
     flex-wrap: wrap
     align-items: center
-    height: 75%
+    height: 80%
 
   .section__col
     overflow: hidden
@@ -93,17 +93,25 @@
     width: calc(100% / 3)
     height: calc(100% / 3)
     min-height: 240px
-    &:hover
-      svg
-        opacity: 0.1
-        +transition(opacity)
-      .text__wrap
-        top: -30%
-        transform: translateY(-30%)
-        +transition(top, transform)
-        p
-          opacity: 1
+    padding: 15px
+    +rmin(768)
+      &:hover
+        svg
+          opacity: 0.1
           +transition(opacity)
+        .text__wrap
+          top: -30%
+          transform: translateY(-30%)
+          +transition(top, transform)
+          p
+            opacity: 1
+            +transition(opacity)
+    +r(768)
+      max-height: 160px
+    +r(1024)
+      width: calc(100% / 2)
+      height: calc(100% / 2)
+
 
     svg
       display: block
@@ -138,10 +146,14 @@
       text-align: center
       transform: translateY(0)
       +transition(top, transform)
+      +r(768)
+        padding: 0
 
       h3
         margin-bottom: 15px
         font-size: 22px
+        +r(768)
+          font-size: 16px
       p
         opacity: 0
         font-size: 18px
